force-app/main/default/objects/Delivery_Object__c/fields/Valid_Scan_Code__c.field-meta.xml
<CustomField>
    <fullName>Valid_Scan_Code__c</fullName>
    <formula>IF( Parent_Gift_Card_Order__r.Name  =  &apos;Cheetah Gift Card Order&apos;, FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid Scan Code</label>
    <type>Checkbox</type>
</CustomField>