force-app/main/default/objects/Delivery_Object__c/fields/Welcome_Gift__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Gift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Welcome Gift</label>
    <referenceTo>Gift_Card_Orders__c</referenceTo>
    <relationshipLabel>Welcome Gift Deliveries</relationshipLabel>
    <relationshipName>Welcome_Gift</relationshipName>
    <type>Lookup</type>
</CustomField>