force-app/main/default/objects/Delivery_Object__c/fields/X1st_delivery__c.field-meta.xml
<CustomField>
    <fullName>X1st_delivery__c</fullName>
    <formula>If( Name = &quot;1&quot;,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1st delivery</label>
    <type>Checkbox</type>
</CustomField>