force-app/main/default/objects/Delivery_Object__c/fields/Zip_Centroid__c.field-meta.xml
<CustomField>
    <fullName>Zip_Centroid__c</fullName>
    <label>Zip Centroid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>