force-app/main/default/objects/Delivery_Object__c/validationRules/Hung_status_should_never_change_if_Hung.validationRule-meta.xml
<ValidationRule>
    <fullName>Hung_status_should_never_change_if_Hung</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Hung_Status__c ) &amp;&amp;
Text( PRIORVALUE( Hung_Status__c  ) ) = &apos;Hung&apos;</errorConditionFormula>
    <errorDisplayField>Hung_Status__c</errorDisplayField>
    <errorMessage>You cannot change this from Hung</errorMessage>
</ValidationRule>