force-app/main/default/objects/Delivery_Object__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Delivery_Date__c</columns>
    <columns>Aws_Url__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Arrival_Latitude__c</columns>
    <columns>Arrival_Longitude__c</columns>
    <columns>Maps_Latitude__c</columns>
    <columns>Maps_Longitude__c</columns>
    <columns>Geocode_Accuracy__c</columns>
    <columns>Geocode_Accuracy_F__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>