force-app/main/default/objects/Delivery_Object__c/listViews/Delivery_One_Duplicates.listView-meta.xml
<ListView>
    <fullName>Delivery_One_Duplicates</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Hung_Status__c</field>
        <operation>equals</operation>
        <value>Sent To Cheetah</value>
    </filters>
    <filters>
        <field>No_of_Attempts__c</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Delivery One Duplicates</label>
</ListView>